<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/more_clean"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/clean"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintHorizontal_bias=".03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".5"
            app:layout_constraintWidth_percent=".9" />


        <TextView
            android:id="@+id/textView13"
            style="@style/text_bold_black_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Details"
            app:layout_constraintBottom_toBottomOf="@+id/more_clean"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/more_clean"
            app:layout_constraintTop_toTopOf="@+id/more_clean" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                style="@style/text_bold_blacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Privacy Policy"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/aaaa"
                android:textColor="@color/black"/>

            <TextView
                style="@style/text_bold_blacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Collection ofinformation and how to use it"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/asada"
                android:textColor="@color/black"/>


            <TextView
                style="@style/text_bold_blacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Information disclosure"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sfdbsd"
                android:textColor="@color/black"/>




            <TextView
                style="@style/text_bold_blacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Information disclosure"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/smxc"
                android:textColor="@color/black"/>


            <TextView
                style="@style/text_bold_blacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Children's Privacy"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/dfsd"
                android:textColor="@color/black"/>

            <TextView
                style="@style/text_bold_blacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/fsadfd"
                android:textColor="@color/black"/>


            <TextView
                style="@style/text_bold_blacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact us"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="hqc0098342@gmail.com"
                android:textColor="@color/black"/>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>